GSLT/src/test/module/bad/BadBindEmpty.module
Module BadBindEmpty {
  Theory Bad() {
    new()
      .addExports ( Proc; Name; )
      .addTerms (
        PRecv . Proc ::= "for" "(" (Bind Name []) "<-" Name ")" "{" Proc "}" ;
      )
  }
}